*SVN*

* Added Time#to_s(:time) which will just return H:M, like 17:44 [DHH]

* Add Module#attr_accessor_with_default to initialize value of attribute before setting it. Closes #6538. [Stuart Halloway, Marcel Molina Jr.]

* Hash#to_xml handles keys with the same name as Kernel methods.  #6613 [Catfish]

* Added Time#end_of_day to get 23:59:59 of that day [DHH]

* Don't quote hash keys in Hash#to_json if they're valid JavaScript identifiers.  Disable this with ActiveSupport::JSON.unquote_hash_key_identifiers = false if you need strict JSON compliance. [Sam Stephenson]

* Lazily load the Unicode Database in the UTF-8 Handler [Rick Olson]

* Update dependencies to delete partially loaded constants. [Nicholas Seckar]

* Fix unicode JSON regexp for Onigurama compatibility.  #6494 [whitley]

* update XmlSimple to 1.0.10. Closes #6532. [nicksieger]

* Update dependencies to allow constants to be defined alongside their siblings. A common case for this is AR model classes with STI; user.rb might define User, Administrator and Guest for example. [Nicholas Seckar]

* next_week respects DST changes.  #6483, #5617, #2353, #2509, #4551 [marclove, rabiedenharn, rails@roetzel.de, jsolson@damogran.org, drbrain@segment7.net]

* Expose methods added to Enumerable in the documentation, such as group_by. Closes #6170. [sergeykojin@gmail.com, Marcel Molina Jr.]

* Ensure Chars#tidy_bytes only tidies broken bytes. Closes #6397 [Manfred Stienstra]

* Add 'unloadable', a method used to mark any constant as requiring an unload after each request. [Nicholas Seckar]

* Make core_ext/string/access.rb multibyte safe. Closes #6388 [Manfred Stienstra]

* Make String#chars slicing behaviour consistent with String. Closes #6387 [Manfred Stienstra]

* Pull in latest multibye patch. Closes #6346 [Manfred Stienstra]
